== 0.2.0
* Tear out all ripl/fresh stuff, rebuild in Eventmachine