@@ -1,4 +1,4 @@
 #!/usr/bin/env ruby
 
 require 'termvana'
-Termvana.start
+Termvana.start()
