@@ -1,4 +1,4 @@
-class HomeAction < Cramp::Action
+class Termvana::HomeAction < Cramp::Action
   def start
     render File.read(File.join(Termvana::Application.root(:public), 'index.html'))
     finish
